# NILAYAN

./: README.md  app.py  main.py  pyproject.toml
attached_assets/: Pasted-from-flask-import-Flask-render-template-jsonify-request-from-dotenv-import-load-dotenv-import-o-1741471639144.txt  Pasted-https-github-com-itz-Mayank-Environmental-Sustainability-i-want-to-use-this-because-i-am-working-o-1741441004266.txt
pages/: air_quality.py  water_quality.py  weather.py
static/css/: custom.css  style.css
static/js/: alerts.js  charts.js  main.js  sw.js
templates/: air_quality.html  base.html  deforestation.html  disaster_map.html  index.html  sos.html  water_quality.html  weather.html
utils/: api_client.py  predictions.py  visualization.py
