[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "requests>=2.32.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.1",
    "plotly>=6.0.0",
    "flask-assets>=2.1.0",
    "python-dotenv>=1.0.1",
    "flask>=3.1.0",
]
